--- a/index.html
+++ b/index.html
@@ -58,26 +58,45 @@
     </div>
   </div>
 
-  <div class="container-fluid">
-    <div class="container icons">
+  <div class="container-fluid gray-section py-5">
+    <div class="container icons my-3">
       <div class="row">
-        <div class="col-4 text-center">
-          <a href="#" class="rotate">
-            <i class="fa-solid fa-chalkboard-user fa-8x"></i>
-            Neco tu ykousim
-          </a>
-        </div>
-        <div class="col-4 text-center">
-          <a href="#" class="rotate">
-            <i class="fa-solid fa-school fa-8x "></i>
-            Neco tu ykousim
-          </a>
-        </div>
-        <div class="col-4 text-center">
-          <a href="#" class="rotate">
-            <i class="fa-solid fa-graduation-cap fa-8x "></i>
-            Neco tu ykousim
-          </a>
+        <div class="col-10 mx-auto">
+          <div class="row">
+            <div class="col-4 text-center">
+              <a href="#" class="rotate mb-3">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-chalkboard-user fa-5x"></i>
+                </div>
+                Základní informace
+              </a>
+              <span>
+                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+              </span>
+            </div>
+            <div class="col-4 text-center">
+              <a href="#" class="rotate mb-3">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-school fa-5x "></i>
+                </div>
+                Může se vám hodit
+              </a>
+              <span>
+                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+              </span>
+            </div>
+            <div class="col-4 text-center">
+              <a href="#" class="rotate mb-3">
+                <div class="mx-auto">
+                  <i class="fa-solid fa-graduation-cap fa-5x "></i>
+                </div>
+                Obrazem od nás
+              </a>
+              <span>
+                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
