--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <div class="mx-auto">
                   <i class="fa-solid fa-chalkboard-user fa-5x"></i>
                 </div>
-                Základní informace
+                <h2 class="text-blue">Základní informace</h2>
               </a>
               <span>
-                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </span>
             </div>
             <div class="col-4 text-center">
@@ -79,10 +79,10 @@
                 <div class="mx-auto">
                   <i class="fa-solid fa-school fa-5x "></i>
                 </div>
-                Může se vám hodit
+                <h2 class="text-yellow">Může se vám hodit</h2>
               </a>
               <span>
-                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </span>
             </div>
             <div class="col-4 text-center">
@@ -90,10 +90,10 @@
                 <div class="mx-auto">
                   <i class="fa-solid fa-graduation-cap fa-5x "></i>
                 </div>
-                Obrazem od nás
+                <h2 class="text-green">Obrazem od nás</h2>
               </a>
               <span>
-                Jak to u nás vypadá? Lorem ipsum lorem ipsum...
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
               </span>
             </div>
           </div>
@@ -101,9 +101,78 @@
       </div>
     </div>
   </div>
+
+  <div class="container pb-5">
+    <div class="row my-5">
+      <div class="col-12">
+        <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
+        <div class="row">
+          <div class="col-6 text-center">
+            <a href="https://www.pardubickykraj.cz/">
+              <img class="pardubice-img" alt="Logo Pardubického kraje" src="www/assets/logo-pardubice.png">
+            </a>
+          </div>
+          <div class="col-6 my-auto">
+            <a href="https://www.klickevzdelani.cz/" class="d-flex align-items-center justify-content-center">
+              <img class="portal-img" alt="Školský portál" src="www/assets/skolsky-portal.png">
+              <p>
+                Školský portál pardubického kraje
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 text-center">
+        <h3 class="mb-4">Naše škola je fakultní školou Univerzity Palackého v Olomouci</h3>
+        <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578">
+          <img alt="logo fakultni skoly" class="upol-img" src="www/assets/fakultni-skola-upol.png">
+        </a>
+      </div>
+    </div>
+  </div>
 </main>
 
-<footer></footer>
+<footer>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-4 mx-auto text-left">
+        <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
+      </div>
+      <div class="col-3 mx-auto text-center">
+        <div class="row">
+          <div class="col-2 text-right my-auto">
+            <i class="fa-solid fa-location-dot fa-2x"></i>
+          </div>
+          <div class="col-10 my-auto text-left">
+            <a href="#">
+              Adámkova 55, 539 01 Hlinsko
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-3 mx-auto text-center">
+        <div class="row">
+          <div class="col-2 text-right my-auto">
+            <i class="fa-solid fa-comment fa-2x"></i>
+          </div>
+          <div class="col-10 d-flex flex-column text-left">
+            <a href="#">
+              469 311 292
+            </a>
+            <a href="#">
+              red@gymhlinsko.cz
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="col-2 mx-auto text-center">
+        <a href="#">
+          <i class="fa-brands fa-facebook fa-2x"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
 <script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
