--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-4 mx-auto text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
+        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
       </div>
       <div class="col-3 mx-auto text-center">
         <div class="row">
