--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li>
-        <a href="#">O škole</a>
+        <a href="www/pages/about-us.html">O škole</a>
         <a href="#">Náš tým</a>
         <a href="#">Dokumenty</a>
         <a href="#">Fotogalerie</a>
