--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
 <header class="container">
   <nav>
+    <ul class="socials">
+      <li>
+        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari">
+        </a>
+      </li>
+    </ul>
     <ul>
       <li class="me-auto">
         <a href="#" class="ms-0">
@@ -16,10 +23,12 @@
         </a>
       </li>
       <li>
-        <a href="www/pages/about-us.html">O škole</a>
+        <a href="about-us.html">Aktivity školy</a>
         <a href="#">Náš tým</a>
-        <a href="#">Dokumenty</a>
+        <a href="#">Škola</a>
         <a href="#">Fotogalerie</a>
+        <a href="#">Pro uchazeče</a>
+        <a href="#">Informace ke studiu</a>
         <a href="#">Kontakty</a>
       </li>
     </ul>
@@ -71,7 +80,7 @@
                 <h2 class="text-blue">Základní informace</h2>
               </a>
               <span>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                Informace o škole, jejím životě a novinkách.
               </span>
             </div>
             <div class="col-4 text-center">
@@ -79,10 +88,10 @@
                 <div class="mx-auto">
                   <i class="fa-solid fa-school fa-5x "></i>
                 </div>
-                <h2 class="text-yellow">Může se vám hodit</h2>
+                <h2 class="text-yellow">Informace pro uchazeče</h2>
               </a>
               <span>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                Informace pro zájemce o studium.
               </span>
             </div>
             <div class="col-4 text-center">
@@ -93,7 +102,7 @@
                 <h2 class="text-green">Obrazem od nás</h2>
               </a>
               <span>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                Záběry ze školních výletů, seminářů, div. kroužků...
               </span>
             </div>
           </div>
