about us changes

--- a/about-us.html
+++ b/about-us.html
@@ -16,10 +16,12 @@
         </a>
       </li>
       <li>
-        <a href="about-us.html">O škole</a>
+        <a href="about-us.html">Aktivity školy</a>
         <a href="#">Náš tým</a>
-        <a href="#">Dokumenty</a>
+        <a href="#">Škola</a>
         <a href="#">Fotogalerie</a>
+        <a href="#">Pro uchazeče</a>
+        <a href="#">Informace ke studiu</a>
         <a href="#">Kontakty</a>
       </li>
     </ul>
