contacts and fotogalery innit

--- a/about-us.html
+++ b/about-us.html
@@ -16,10 +16,10 @@
         </a>
       </li>
       <li>
-        <a href="about-us.html">Aktivity školy</a>
-        <a href="#">Náš tým</a>
+        <a href="about-us.html" class="active">Aktivity školy</a>
+        <a href="our-team.html">Náš tým</a>
         <a href="#">Škola</a>
-        <a href="#">Fotogalerie</a>
+        <a href="fotogalery.html">Fotogalerie</a>
         <a href="#">Pro uchazeče</a>
         <a href="#">Informace ke studiu</a>
         <a href="#">Kontakty</a>
