--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="container">
-  <nav>
+  <nav role="navigation">
     <ul class="socials">
       <li>
         <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
@@ -24,12 +24,12 @@
       </li>
       <li>
         <a href="about-us.html">Aktivity školy</a>
-        <a href="#">Náš tým</a>
+        <a href="our-team.html">Náš tým</a>
         <a href="#">Škola</a>
-        <a href="#">Fotogalerie</a>
+        <a href="fotogalery.html">Fotogalerie</a>
         <a href="#">Pro uchazeče</a>
         <a href="#">Informace ke studiu</a>
-        <a href="#">Kontakty</a>
+        <a href="contacts.html">Kontakty</a>
       </li>
     </ul>
   </nav>
