--- a/our-team.html
+++ b/our-team.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header class="container">
-  <nav>
+  <nav role="navigation">
     <ul>
       <li class="me-auto">
         <a href="index.html" class="ms-0">
@@ -21,7 +21,7 @@
         <a href="fotogalery.html">Fotogalerie</a>
         <a href="#">Pro uchazeče</a>
         <a href="#">Informace ke studiu</a>
-        <a href="#">Kontakty</a>
+        <a href="contacts.html">Kontakty</a>
       </li>
     </ul>
   </nav>
