--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="container">
-  <nav>
+  <nav role="navigation">
     <ul>
       <li class="me-auto">
         <a href="index.html" class="ms-0">
@@ -16,13 +16,13 @@
         </a>
       </li>
       <li>
-        <a href="about-us.html" class="active">Aktivity školy</a>
+        <a class="active" href="about-us.html">Aktivity školy</a>
         <a href="our-team.html">Náš tým</a>
         <a href="#">Škola</a>
         <a href="fotogalery.html">Fotogalerie</a>
         <a href="#">Pro uchazeče</a>
         <a href="#">Informace ke studiu</a>
-        <a href="#">Kontakty</a>
+        <a href="contacts.html">Kontakty</a>
       </li>
     </ul>
   </nav>
