--- a/about-us.html
+++ b/about-us.html
@@ -206,7 +206,12 @@
                 <i class="fa-solid fa-location-dot fa-2x"></i>
               </div>
               <div class="col-10 my-auto text-left">
-                <a href="#"> Adámkova 55, 539 01 Hlinsko </a>
+                <a
+                  href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                  target="_blank"
+                >
+                  Adámkova 55, 539 01 Hlinsko
+                </a>
               </div>
             </div>
           </div>
