--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             </a>
           </li>
         </ul>
-        <ul>
+        <ul class="navigation">
           <li class="me-auto">
             <a href="#" class="ms-0">
               <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
             </a>
           </li>
-          <li>
+          <li class="menu">
             <a href="about-us.html">Aktivity školy</a>
             <a href="our-team.html">Náš tým</a>
             <a href="#">Škola</a>
@@ -36,6 +36,17 @@
             <a href="#">Pro uchazeče</a>
             <a href="#">Informace ke studiu</a>
             <a href="contacts.html">Kontakty</a>
+          </li>
+          <li class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </li>
+          <li class="mobile-menu">
+            <a href="#o-nas">O nas</a>
+            <a href="#galerie">Galerie</a>
+            <a href="#historie">Historie</a>
+            <a href="#kontakt">Kontakt</a>
           </li>
         </ul>
       </nav>
@@ -81,8 +92,10 @@
           <div class="row">
             <div class="col-10 mx-auto">
               <div class="row">
-                <div class="col-4 text-center">
-                  <a href="#" class="rotate mb-3">
+                <div
+                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
+                >
+                  <a href="#" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-chalkboard-user fa-5x"></i>
                     </div>
@@ -90,8 +103,10 @@
                   </a>
                   <span> Informace o škole, jejím životě a novinkách. </span>
                 </div>
-                <div class="col-4 text-center">
-                  <a href="#" class="rotate mb-3">
+                <div
+                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
+                >
+                  <a href="#" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-school fa-5x"></i>
                     </div>
@@ -99,8 +114,10 @@
                   </a>
                   <span> Informace pro zájemce o studium. </span>
                 </div>
-                <div class="col-4 text-center">
-                  <a href="#" class="rotate mb-3">
+                <div
+                  class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
+                >
+                  <a href="#" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-graduation-cap fa-5x"></i>
                     </div>
@@ -121,8 +138,8 @@
           <div class="col-12">
             <h3 class="text-center">Zřizovatelem je Pardubický kraj</h3>
             <div class="row">
-              <div class="col-6 text-center">
-                <a href="https://www.pardubickykraj.cz/">
+              <div class="col-sm-6 col-12 text-center">
+                <a href="https://www.pardubickykraj.cz/" target="_blank">
                   <img
                     class="pardubice-img"
                     alt="Logo Pardubického kraje"
@@ -130,10 +147,11 @@
                   />
                 </a>
               </div>
-              <div class="col-6 my-auto">
+              <div class="col-sm-6 col-12 my-auto">
                 <a
                   href="https://www.klickevzdelani.cz/"
                   class="d-flex align-items-center justify-content-center"
+                  target="_blank"
                 >
                   <img
                     class="portal-img"
@@ -149,7 +167,10 @@
             <h3 class="mb-4">
               Naše škola je fakultní školou Univerzity Palackého v Olomouci
             </h3>
-            <a href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578">
+            <a
+              href="https://www.prf.upol.cz/verejnost/pro-skoly/#c58578"
+              target="_blank"
+            >
               <img
                 alt="logo fakultni skoly"
                 class="upol-img"
@@ -177,7 +198,12 @@
                 <i class="fa-solid fa-location-dot fa-2x"></i>
               </div>
               <div class="col-10 my-auto text-left">
-                <a href="#"> Adámkova 55, 539 01 Hlinsko </a>
+                <a
+                  href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                  target="_blank"
+                >
+                  Adámkova 55, 539 01 Hlinsko
+                </a>
               </div>
             </div>
           </div>
