--- a/our-team.html
+++ b/our-team.html
@@ -32,7 +32,7 @@
             <a class="active" href="our-team.html">Náš tým</a>
             <a href="#">Škola</a>
             <a href="fotogalery.html">Fotogalerie</a>
-            <a href="#">Pro uchazeče</a>
+            <a href="for-applicants.html">Pro uchazeče</a>
             <a href="#">Informace ke studiu</a>
             <a href="contacts.html">Kontakty</a>
           </li>
