--- a/fotogalery.html
+++ b/fotogalery.html
@@ -33,7 +33,7 @@
             <a href="our-team.html">Náš tým</a>
             <a href="#">Škola</a>
             <a class="active" href="fotogalery.html">Fotogalerie</a>
-            <a href="#">Pro uchazeče</a>
+            <a href="for-applicants.html">Pro uchazeče</a>
             <a href="#">Informace ke studiu</a>
             <a href="contacts.html">Kontakty</a>
           </li>
