Added Applicants page, small changes

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div
                   class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
                 >
-                  <a href="#" class="rotate mb-lg-3 mb-0">
+                  <a href="about-us.html" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-chalkboard-user fa-5x"></i>
                     </div>
@@ -106,7 +106,7 @@
                 <div
                   class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
                 >
-                  <a href="#" class="rotate mb-lg-3 mb-0">
+                  <a href="for-applicants.html" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-school fa-5x"></i>
                     </div>
@@ -117,7 +117,7 @@
                 <div
                   class="col-xl-4 col-lg-4 col-sm-12 mb-lg-0 mb-sm-5 mb-5 text-center"
                 >
-                  <a href="#" class="rotate mb-lg-3 mb-0">
+                  <a href="fotogalery.html" class="rotate mb-lg-3 mb-0">
                     <div class="mx-auto">
                       <i class="fa-solid fa-graduation-cap fa-5x"></i>
                     </div>
