--- a/our-team.html
+++ b/our-team.html
@@ -40,7 +40,7 @@
       </nav>
     </header>
 
-    <main class="mb-5 pb-5">
+    <main>
       <div id="sub-nav">
         <div class="container">
           <ul class="links">
