--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
 
-    <main class="mb-5 pb-5">
+    <main>
       <div id="sub-nav">
         <div class="container">
           <ul class="links"></ul>
