Menu fixes, submenu sticky

--- a/empty-page.html
+++ b/empty-page.html
@@ -2,121 +2,119 @@
 <html lang="cs">
 
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="www/dist/style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="www/dist/style.css" />
   <title>Gymnázium K. V. Raise</title>
 </head>
 
 <body>
-<header class="container-lg container-fluid">
-  <nav role="navigation">
-    <ul id="socials">
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari"/>
-        </a>
-      </li>
-    </ul>
-    <ul id="main-navigation">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-    <ul id="burger-button" class="m-0">
-      <li class="burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </li>
-    </ul>
-    <ul class="mobile-menu">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <nav role="navigation" class="container-lg container-fluid">
+      <ul id="socials">
+        <li class="me-auto">
+          <a href="index.html" class="ms-0">
+            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+          </a>
+        </li>
+      </ul>
+      <ul id="main-navigation">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+      <ul id="burger-button" class="m-0">
+        <li class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </li>
+      </ul>
+      <ul class="mobile-menu">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links"></ul>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1>
-          Zde nic neni
-
-          pridat obrazek s pavucinou
-        </h1>
+  <main>
+    <div id="sub-nav">
+      <div class="container">
+        <ul class="links"></ul>
       </div>
     </div>
-  </div>
 
-  <footer>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
+    <div class="container h-100">
+      <div class="row justify-content-center align-items-center h-100">
+        <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
+          <i class="fa-solid fa-laptop-medical fa-10x" style="color: #666666bd;"></i>
+          <h2>Opps... Tady ještě nic není. Zkus to někdy jindy!</h2>
         </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <i class="fa-solid fa-location-dot fa-2x"></i>
-            </div>
-            <div class="col-10 my-auto text-left">
-              <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-                 target="_blank">
-                Adámkova 55, 539 01 Hlinsko
-              </a>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-3 col-12 mx-auto my-1 text-left">
+            <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+          </div>
+          <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+            <div class="row">
+              <div class="col-2 my-auto">
+                <i class="fa-solid fa-location-dot fa-2x"></i>
+              </div>
+              <div class="col-10 my-auto text-left">
+                <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                  target="_blank">
+                  Adámkova 55, 539 01 Hlinsko
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <i class="fa-solid fa-comment fa-2x"></i>
-            </div>
-            <div class="col-10 d-flex flex-column text-left">
-              <a href="#"> 469 311 292 </a>
-              <a href="#"> red@gymhlinsko.cz </a>
+          <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+            <div class="row">
+              <div class="col-2 my-auto">
+                <i class="fa-solid fa-comment fa-2x"></i>
+              </div>
+              <div class="col-10 d-flex flex-column text-left">
+                <a href="#"> 469 311 292 </a>
+                <a href="#"> red@gymhlinsko.cz </a>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <i class="fa-brands fa-facebook fa-2x"></i>
-            </div>
-            <div class="col-10 my-auto text-left">
-              <a href="#" target="_blank">
-                Facebook
-              </a>
+          <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+            <div class="row">
+              <div class="col-2 my-auto">
+                <i class="fa-brands fa-facebook fa-2x"></i>
+              </div>
+              <div class="col-10 my-auto text-left">
+                <a href="#" target="_blank">
+                  Facebook
+                </a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-</main>
+    </footer>
+  </main>
 </body>
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
 <script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
+
 </html>
