--- a/contacts.html
+++ b/contacts.html
@@ -2,35 +2,35 @@
 <html lang="cs">
 
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="www/dist/style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="www/dist/style.css" />
   <title>Gymnázium K. V. Raise</title>
 </head>
 
 <body>
-<header class="container-lg container-fluid">
-  <nav role="navigation">
+<header>
+  <nav role="navigation" class="container-lg container-fluid">
     <ul id="socials">
       <li class="me-auto">
         <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
+          <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
         </a>
       </li>
       <li>
         <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari"/>
+          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
         </a>
       </li>
     </ul>
     <ul id="main-navigation">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
+      <li><a href="about-us.html">Aktivity školy</a></li>
+      <li><a href="our-team.html">Náš tým</a></li>
+      <li><a href="empty-page.html">Škola</a></li>
+      <li><a href="fotogalery.html">Fotogalerie</a></li>
+      <li><a href="for-applicants.html">Pro uchazeče</a></li>
+      <li><a href="empty-page.html">Informace ke studiu</a></li>
+      <li><a href="contacts.html">Kontakty</a></li>
     </ul>
     <ul id="burger-button" class="m-0">
       <li class="burger">
@@ -40,154 +40,154 @@
       </li>
     </ul>
     <ul class="mobile-menu">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
+      <li><a href="about-us.html">Aktivity školy</a></li>
+      <li><a href="our-team.html">Náš tým</a></li>
+      <li><a href="empty-page.html">Škola</a></li>
+      <li><a href="fotogalery.html">Fotogalerie</a></li>
+      <li><a href="for-applicants.html">Pro uchazeče</a></li>
+      <li><a href="empty-page.html">Informace ke studiu</a></li>
+      <li><a href="contacts.html">Kontakty</a></li>
     </ul>
   </nav>
-</header>
+  </header>
 
-<main>
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links"></ul>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-center">Kde nás najdete</h1>
-        <h2 class="text-center">
-          Ptejte se nás, na co chcete, rádi Vám odpovíme.
-        </h2>
+  <main>
+    <div id="sub-nav">
+      <div class="container">
+        <ul class="links"></ul>
       </div>
     </div>
 
-    <div class="row text-center mt-3">
-      <div class="col-xl-8 col-lg-10 col-12 mx-auto">
-        <div class="row">
-          <div class="col-4">
-            <div class="box primary">
-              <h3 class="mt-0">Škola</h3>
-              <p>Adámkova 55, 539 01 Hlinsko<br/></p>
-              <a href="tel:+420 469 311 292">+420 469 311 292</a>
-              <br/>
-              <a href="tel:+420 469 311 190">+420 469 311 190</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center">Kde nás najdete</h1>
+          <h2 class="text-center">
+            Ptejte se nás, na co chcete, rádi Vám odpovíme.
+          </h2>
+        </div>
+      </div>
+
+      <div class="row text-center mt-3">
+        <div class="col-xl-8 col-lg-10 col-12 mx-auto">
+          <div class="row">
+            <div class="col-4">
+              <div class="box primary">
+                <h3 class="mt-0">Škola</h3>
+                <p>Adámkova 55, 539 01 Hlinsko<br /></p>
+                <a href="tel:+420 469 311 292">+420 469 311 292</a>
+                <br />
+                <a href="tel:+420 469 311 190">+420 469 311 190</a>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="box secondary">
+                <h3 class="mt-0">RNDr. Rostislav Dvořáček</h3>
+                <p>ředitel<br /></p>
+                <a href="tel:+420 722 469 887">+420 722 469 887</a>
+                <br />
+                <a href="mailto: red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="box tertiary">
+                <h3 class="mt-0">Ing. Romana Nováková</h3>
+                <p>zástupkyně ředitele, Bi, IT, Ltv, Eko<br /></p>
+                <a href="mailto: novakova.romana@gymhlinsko.cz">
+                  novakova.romana@gymhlinsko.cz
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-4">
-            <div class="box secondary">
-              <h3 class="mt-0">RNDr. Rostislav Dvořáček</h3>
-              <p>ředitel<br/></p>
-              <a href="tel:+420 722 469 887">+420 722 469 887</a>
-              <br/>
-              <a href="mailto: red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="stripe primary text-center">
+            Napiště nám Váš dotaz pomocí formuláře
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-10 col-12 mx-auto">
+          <form>
+            <label>
+              Jméno a příjmení
+              <input type="text" placeholder="Př.: Vladimír Novák..." />
+            </label>
+            <label>
+              Váš e-mail
+              <input type="email" placeholder="Př.: E-mail@seznam.cz..." />
+            </label>
+            <label>
+              Telefonní číslo
+              <input type="tel" placeholder="Př.: 123 456 789..." />
+            </label>
+            <label>
+              Napiště zde Váš dotaz
+              <textarea placeholder="Popište Váš dotaz zde..." rows="7">
+                </textarea>
+            </label>
+            <button class="btn btn-primary mt-2" type="submit">
+              Odeslat dotaz
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-3 col-12 mx-auto my-1 text-left">
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-location-dot fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                target="_blank">
+                Adámkova 55, 539 01 Hlinsko
+              </a>
             </div>
           </div>
-          <div class="col-4">
-            <div class="box tertiary">
-              <h3 class="mt-0">Ing. Romana Nováková</h3>
-              <p>zástupkyně ředitele, Bi, IT, Ltv, Eko<br/></p>
-              <a href="mailto: novakova.romana@gymhlinsko.cz">
-                novakova.romana@gymhlinsko.cz
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-comment fa-2x"></i>
+            </div>
+            <div class="col-10 d-flex flex-column text-left">
+              <a href="#"> 469 311 292 </a>
+              <a href="#"> red@gymhlinsko.cz </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-brands fa-facebook fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="#" target="_blank">
+                Facebook
               </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <div class="stripe primary text-center">
-          Napiště nám Váš dotaz pomocí formuláře
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6 col-md-10 col-12 mx-auto">
-        <form>
-          <label>
-            Jméno a příjmení
-            <input type="text" placeholder="Př.: Vladimír Novák..."/>
-          </label>
-          <label>
-            Váš e-mail
-            <input type="email" placeholder="Př.: E-mail@seznam.cz..."/>
-          </label>
-          <label>
-            Telefonní číslo
-            <input type="tel" placeholder="Př.: 123 456 789..."/>
-          </label>
-          <label>
-            Napiště zde Váš dotaz
-            <textarea placeholder="Popište Váš dotaz zde..." rows="7">
-                </textarea>
-          </label>
-          <button class="btn btn-primary mt-2" type="submit">
-            Odeslat dotaz
-          </button>
-        </form>
-      </div>
-    </div>
-  </div>
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-location-dot fa-2x"></i>
-          </div>
-          <div class="col-10 my-auto text-left">
-            <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-               target="_blank">
-              Adámkova 55, 539 01 Hlinsko
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-comment fa-2x"></i>
-          </div>
-          <div class="col-10 d-flex flex-column text-left">
-            <a href="#"> 469 311 292 </a>
-            <a href="#"> red@gymhlinsko.cz </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-brands fa-facebook fa-2x"></i>
-          </div>
-          <div class="col-10 my-auto text-left">
-            <a href="#" target="_blank">
-              Facebook
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
+  </footer>
 </body>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
