--- a/for-applicants.html
+++ b/for-applicants.html
@@ -2,204 +2,217 @@
 <html lang="cs">
 
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="www/dist/style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="www/dist/style.css" />
   <title>Gymnázium K. V. Raise</title>
 </head>
 
 <body>
-<header class="container-lg container-fluid">
-  <nav role="navigation">
-    <ul id="socials">
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari"/>
-        </a>
-      </li>
-    </ul>
-    <ul id="main-navigation">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-    <ul id="burger-button" class="m-0">
-      <li class="burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </li>
-    </ul>
-    <ul class="mobile-menu">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links">
+  <header>
+    <nav role="navigation" class="container-lg container-fluid">
+      <ul id="socials">
+        <li class="me-auto">
+          <a href="index.html" class="ms-0">
+            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+          </a>
+        </li>
       </ul>
+      <ul id="main-navigation">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+      <ul id="burger-button" class="m-0">
+        <li class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </li>
+      </ul>
+      <ul class="mobile-menu">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div id="sub-nav">
+      <div class="container">
+        <ul class="links">
+        </ul>
+      </div>
     </div>
-  </div>
 
-  <div class="container for-applicants">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-center">Vse o prijimacich zkousek a pripravy na ne</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center">Vse o prijimacich zkousek a pripravy na ne</h1>
+        </div>
       </div>
+      <section class="row for-applicants mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-solid fa-bullhorn fa-6x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="odd">
+            <div class="col-12">
+              <h2 class="m-0">PŘIJÍMACÍ ŘÍZENÍ NA ŠKOLNÍ ROK 2023/2024</h2>
+            </div>
+            <div class="col-12 ms-2">
+              <h3>
+                Vyhlášení 1. kola přijímacího řízení na školní rok 2023/2024 do 1. ročníku oboru vzdělání:
+              </h3>
+              <ul>
+                <li>
+                  <a target="_blank"
+                    href="https://c97b5d80a7.clvaw-cdnwnd.com/1c7a3a253ede118c9c0aaa5e714c134f/200002709-136f8136fc/Vyhl%C3%A1%C5%A1en%C3%AD%201.%20kola%20p%C5%99ij%C3%ADmac%C3%ADho%20%C5%99%C3%ADzen%C3%AD%20pro%20obory%20vzd%C4%9Bl%C3%A1n%C3%AD%20Gymn%C3%A1zium%20osmilet%C3%A9%20a%20Gymn%C3%A1zium%20%C4%8Dty%C5%99let%C3%A9.pdf">
+                    79-41-K/81 Gymnázium (osmiletý obor vzdělání, denní studium) - <i>pro vice informaci kliknete</i>
+                  </a>
+                </li>
+                <li>
+                  <a target="_blank"
+                    href="https://c97b5d80a7.clvaw-cdnwnd.com/1c7a3a253ede118c9c0aaa5e714c134f/200002710-8b1ff8b203/Krit%C3%A9ria%20pro%201.%20kolo%20p%C5%99ij%C3%ADmac%C3%ADho%20%C5%99%C3%ADzen%C3%AD%20pro%20obory%20vzd%C4%9Bl%C3%A1n%C3%AD%20Gymn%C3%A1zium%20osmilet%C3%A9%20a%20Gymn%C3%A1zium%20%C4%8Dty%C5%99let%C3%A9.pdf">
+                    79-41-K/41 Gymnázium (čtyřletý obor vzdělání, denní studium) - <i>pro vice informaci kliknete</i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="row for-applicants mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-calendar fa-6x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="even">
+            <div class="col-12">
+              <h2 class="m-0">PŘÍPRAVNé KURZy ve školním roce 2022/2023</h2>
+            </div>
+            <div class="col-12 ms-2">
+              <h3>
+                Připravujeme přípravné kurzy na přijímací zkoušky z M a ČJ, které budou probíhat od února 2023.
+              </h3>
+              <ul>
+                Online přihlášky vyplňte do 15. ledna 2023:
+                <li>
+                  <a target="_blank" href="#">
+                    přihláška pro žáky 9. tříd
+                  </a>
+                </li>
+                <li>
+                  <a target="_blank" href="#">
+                    přihláška pro žáky 5. tříd
+                  </a>
+                </li>
+                <li>
+                  <a target="_blank" href="#">
+                    Harmonogram přípravných kurzů, který odešel na e-maily uvedené v přihláškách, najdete zde:
+                    termíny přípravných kurzů 2023.pdf (395294)
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="row for-applicants mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-solid fa-file-pen fa-6x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="odd">
+            <div class="col-12">
+              <h2 class="m-0">Přijímací zkoušky nanečisto 2022/2023</h2>
+            </div>
+            <div class="col-12 ms-2">
+              <h3>
+                Na naší škole proběhly přijímací zkoušky nanečisto z M a ČJ pro žáky 5. a 9. tříd ZŠ v pondělí 6. února
+                2023.
+              </h3>
+              <ul>
+                Výsledky:
+                <li>
+                  <a target="_blank" href="#">
+                    Výsledky žáku 9. třídy
+                  </a>
+                </li>
+                <li>
+                  <a target="_blank" href="#">
+                    Výsledky žáku 5. třídy
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </article>
+        </div>
+      </section>
     </div>
+  </main>
 
-    <section class="row even">
-      <div class="col-12">
-        <h2 class="m-0">PŘIJÍMACÍ ŘÍZENÍ NA ŠKOLNÍ ROK 2023/2024</h2>
-      </div>
-      <div class="col-12 ms-2">
-        <h3>
-          Vyhlášení 1. kola přijímacího řízení na školní rok 2023/2024 do 1. ročníku oboru vzdělání:
-        </h3>
-        <ul>
-          <li>
-
-            <a target="_blank"
-               href="https://c97b5d80a7.clvaw-cdnwnd.com/1c7a3a253ede118c9c0aaa5e714c134f/200002709-136f8136fc/Vyhl%C3%A1%C5%A1en%C3%AD%201.%20kola%20p%C5%99ij%C3%ADmac%C3%ADho%20%C5%99%C3%ADzen%C3%AD%20pro%20obory%20vzd%C4%9Bl%C3%A1n%C3%AD%20Gymn%C3%A1zium%20osmilet%C3%A9%20a%20Gymn%C3%A1zium%20%C4%8Dty%C5%99let%C3%A9.pdf">
-              79-41-K/81 Gymnázium (osmiletý obor vzdělání, denní studium) - <i>pro vice informaci kliknete</i>
-            </a>
-          </li>
-          <li>
-            <a target="_blank"
-               href="https://c97b5d80a7.clvaw-cdnwnd.com/1c7a3a253ede118c9c0aaa5e714c134f/200002710-8b1ff8b203/Krit%C3%A9ria%20pro%201.%20kolo%20p%C5%99ij%C3%ADmac%C3%ADho%20%C5%99%C3%ADzen%C3%AD%20pro%20obory%20vzd%C4%9Bl%C3%A1n%C3%AD%20Gymn%C3%A1zium%20osmilet%C3%A9%20a%20Gymn%C3%A1zium%20%C4%8Dty%C5%99let%C3%A9.pdf">
-              79-41-K/41 Gymnázium (čtyřletý obor vzdělání, denní studium) - <i>pro vice informaci kliknete</i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="row odd">
-      <div class="col-12">
-        <h2 class="m-0">PŘÍPRAVNé KURZy ve školním roce 2022/2023</h2>
-      </div>
-      <div class="col-12 ms-2">
-        <h3>
-          Připravujeme přípravné kurzy na přijímací zkoušky z M a ČJ, které budou probíhat od února 2023.
-        </h3>
-        <ul>
-          Online přihlášky vyplňte do 15. ledna 2023:
-          <li>
-
-            <a target="_blank" href="#">
-              přihláška pro žáky 9. tříd
-            </a>
-          </li>
-          <li>
-
-            <a target="_blank" href="#">
-              přihláška pro žáky 5. tříd
-            </a>
-          </li>
-          <li>
-
-            <a target="_blank" href="#">
-              Harmonogram přípravných kurzů, který odešel na e-maily uvedené v přihláškách, najdete zde:
-              termíny přípravných kurzů 2023.pdf (395294)
-            </a>
-          </li>
-        </ul>
-      </div>
-
-    </section>
-
-    <section class="row even">
-      <div class="col-12">
-        <h2 class="m-0">Přijímací zkoušky nanečisto 2022/2023</h2>
-      </div>
-      <div class="col-12 ms-2">
-        <h3>
-          Na naší škole proběhly přijímací zkoušky nanečisto z M a ČJ pro žáky 5. a 9. tříd ZŠ v pondělí 6. února
-          2023.
-
-        </h3>
-        <ul>
-          Výsledky:
-          <li>
-            <a target="_blank" href="#">
-              Výsledky žáku 9. třídy
-            </a>
-          </li>
-          <li>
-
-            <a target="_blank" href="#">
-              Výsledky žáku 5. třídy
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-  </div>
-</main>
-
-<footer>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-location-dot fa-2x"></i>
+  <footer>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-3 col-12 mx-auto my-1 text-left">
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-location-dot fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                target="_blank">
+                Adámkova 55, 539 01 Hlinsko
+              </a>
+            </div>
           </div>
-          <div class="col-10 my-auto text-left">
-            <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-               target="_blank">
-              Adámkova 55, 539 01 Hlinsko
-            </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-comment fa-2x"></i>
+            </div>
+            <div class="col-10 d-flex flex-column text-left">
+              <a href="#"> 469 311 292 </a>
+              <a href="#"> red@gymhlinsko.cz </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-brands fa-facebook fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="#" target="_blank">
+                Facebook
+              </a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-comment fa-2x"></i>
-          </div>
-          <div class="col-10 d-flex flex-column text-left">
-            <a href="#"> 469 311 292 </a>
-            <a href="#"> red@gymhlinsko.cz </a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-brands fa-facebook fa-2x"></i>
-          </div>
-          <div class="col-10 my-auto text-left">
-            <a href="#" target="_blank">
-              Facebook
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </body>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
