--- a/our-team.html
+++ b/our-team.html
@@ -2,207 +2,207 @@
 <html lang="cs">
 
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="www/dist/style.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="www/dist/style.css" />
   <title>Gymnázium K. V. Raise</title>
 </head>
 
 <body>
-<header class="container-lg container-fluid">
-  <nav role="navigation">
-    <ul id="socials">
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png"/>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari"/>
-        </a>
-      </li>
-    </ul>
-    <ul id="main-navigation">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-    <ul id="burger-button" class="m-0">
-      <li class="burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </li>
-    </ul>
-    <ul class="mobile-menu">
-      <li><a href="about-us.html">Aktivity školy</a></li><!--
-      --><li><a href="our-team.html">Náš tým</a></li><!--
-      --><li><a href="empty-page.html">Škola</a></li><!--
-      --><li><a href="fotogalery.html">Fotogalerie</a></li><!--
-      --><li><a href="for-applicants.html">Pro uchazeče</a></li><!--
-      --><li><a href="empty-page.html">Informace ke studiu</a></li><!--
-      --><li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <div id="sub-nav">
-    <div class="container">
-      <ul class="links">
-        <li>
-          <a class="active" href="#">S kým se u nás setkáte</a>
+  <header>
+    <nav role="navigation" class="container-lg container-fluid">
+      <ul id="socials">
+        <li class="me-auto">
+          <a href="index.html" class="ms-0">
+            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+          </a>
         </li>
         <li>
-          <a href="#">Hledáme do týmu</a>
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+          </a>
         </li>
       </ul>
-    </div>
-  </div>
+      <ul id="main-navigation">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+      <ul id="burger-button" class="m-0">
+        <li class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </li>
+      </ul>
+      <ul class="mobile-menu">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1 class="text-center">S kým se u nás setkáte</h1>
+  <main>
+    <div id="sub-nav">
+      <div class="container">
+        <ul class="links">
+          <li>
+            <a class="active" href="#">S kým se u nás setkáte</a>
+          </li>
+          <li>
+            <a href="#">Hledáme do týmu</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="row our-team mb-4">
-      <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
-        <article class="odd">
-          <h3 class="mb-1">Mgr. Jiri Kos</h3>
-          <h4 class="m-0">ucitel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">jiri.kos@seznam.cz</a>
-          <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
-            condimentum augue id magna semper rutrum. Fusce consectetuer
-            risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
-            tincidunt scelerisque libero. Cras pede libero, dapibus nec,
-            pretium sit amet, tempor quis. Aliquam erat volutpat.
-            Pellentesque arcu. Temporibus autem quibusdam et aut officiis
-            debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer
-            pellentesque quam vel velit. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
-            Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
-            aspernatur aut odit aut fugit, sed quia consequuntur magni
-            dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
-            nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="row our-team mb-4">
-      <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
-        <article class="even">
-          <h3 class="mb-1">RNDr. Rostislav Dvoracek</h3>
-          <h4 class="m-0">reditel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">rostislav.dvoracek@seznam.cz</a>
-          <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
-            condimentum augue id magna semper rutrum. Fusce consectetuer
-            risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
-            tincidunt scelerisque libero. Cras pede libero, dapibus nec,
-            pretium sit amet, tempor quis. Aliquam erat volutpat.
-            Pellentesque arcu. Temporibus autem quibusdam et aut officiis
-            debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer
-            pellentesque quam vel velit. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
-            Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
-            aspernatur aut odit aut fugit, sed quia consequuntur magni
-            dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
-            nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-    <div class="row our-team mb-4">
-      <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
-        <i class="fa-regular fa-circle-user fa-10x"></i>
-      </div>
-      <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
-        <article class="odd">
-          <h3 class="mb-1">Mgr. Romana Novakova</h3>
-          <h4 class="m-0">zastupkyne reditel</h4>
-          <a href="mailto:jiri.kos@seznam.cz">romana.novakova@seznam.cz</a>
-          <p class="text-justify">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
-            condimentum augue id magna semper rutrum. Fusce consectetuer
-            risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
-            tincidunt scelerisque libero. Cras pede libero, dapibus nec,
-            pretium sit amet, tempor quis. Aliquam erat volutpat.
-            Pellentesque arcu. Temporibus autem quibusdam et aut officiis
-            debitis aut rerum necessitatibus saepe eveniet ut et voluptates
-            repudiandae sint et molestiae non recusandae. Integer
-            pellentesque quam vel velit. Lorem ipsum dolor sit amet,
-            consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
-            Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
-            aspernatur aut odit aut fugit, sed quia consequuntur magni
-            dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
-            nonummy eget tristique non, rhoncus non leo.
-          </p>
-        </article>
-      </div>
-    </div>
-  </div>
-</main>
 
-<footer>
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-        <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png"/>
-      </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-location-dot fa-2x"></i>
-          </div>
-          <div class="col-10 my-auto text-left">
-            <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-               target="_blank">
-              Adámkova 55, 539 01 Hlinsko
-            </a>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center">S kým se u nás setkáte</h1>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-solid fa-comment fa-2x"></i>
-          </div>
-          <div class="col-10 d-flex flex-column text-left">
-            <a href="#"> 469 311 292 </a>
-            <a href="#"> red@gymhlinsko.cz </a>
-          </div>
+      <div class="row our-team mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-circle-user fa-10x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="odd">
+            <h3 class="mb-1">Mgr. Jiri Kos</h3>
+            <h4 class="m-0">ucitel</h4>
+            <a href="mailto:jiri.kos@seznam.cz">jiri.kos@seznam.cz</a>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+              condimentum augue id magna semper rutrum. Fusce consectetuer
+              risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+              tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+              pretium sit amet, tempor quis. Aliquam erat volutpat.
+              Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+              debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+              repudiandae sint et molestiae non recusandae. Integer
+              pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+              consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+              Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+              aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+              nonummy eget tristique non, rhoncus non leo.
+            </p>
+          </article>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-        <div class="row">
-          <div class="col-2 my-auto">
-            <i class="fa-brands fa-facebook fa-2x"></i>
+      <div class="row our-team mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-circle-user fa-10x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="even">
+            <h3 class="mb-1">RNDr. Rostislav Dvoracek</h3>
+            <h4 class="m-0">reditel</h4>
+            <a href="mailto:jiri.kos@seznam.cz">rostislav.dvoracek@seznam.cz</a>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+              condimentum augue id magna semper rutrum. Fusce consectetuer
+              risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+              tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+              pretium sit amet, tempor quis. Aliquam erat volutpat.
+              Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+              debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+              repudiandae sint et molestiae non recusandae. Integer
+              pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+              consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+              Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+              aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+              nonummy eget tristique non, rhoncus non leo.
+            </p>
+          </article>
+        </div>
+      </div>
+      <div class="row our-team mb-4">
+        <div class="col-lg-3 col-12 mb-lg-0 mb-4 d-flex justify-content-center align-items-center">
+          <i class="fa-regular fa-circle-user fa-10x"></i>
+        </div>
+        <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
+          <article class="odd">
+            <h3 class="mb-1">Mgr. Romana Novakova</h3>
+            <h4 class="m-0">zastupkyne reditel</h4>
+            <a href="mailto:jiri.kos@seznam.cz">romana.novakova@seznam.cz</a>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis
+              condimentum augue id magna semper rutrum. Fusce consectetuer
+              risus a nunc. Fusce tellus. Aliquam erat volutpat. Quisque
+              tincidunt scelerisque libero. Cras pede libero, dapibus nec,
+              pretium sit amet, tempor quis. Aliquam erat volutpat.
+              Pellentesque arcu. Temporibus autem quibusdam et aut officiis
+              debitis aut rerum necessitatibus saepe eveniet ut et voluptates
+              repudiandae sint et molestiae non recusandae. Integer
+              pellentesque quam vel velit. Lorem ipsum dolor sit amet,
+              consectetuer adipiscing elit. Etiam posuere lacus quis dolor.
+              Quisque porta. Nemo enim ipsam voluptatem quia voluptas sit
+              aspernatur aut odit aut fugit, sed quia consequuntur magni
+              dolores eos qui ratione voluptatem sequi nesciunt. Morbi leo mi,
+              nonummy eget tristique non, rhoncus non leo.
+            </p>
+          </article>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-3 col-12 mx-auto my-1 text-left">
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-location-dot fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
+                target="_blank">
+                Adámkova 55, 539 01 Hlinsko
+              </a>
+            </div>
           </div>
-          <div class="col-10 my-auto text-left">
-            <a href="#" target="_blank">
-              Facebook
-            </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-solid fa-comment fa-2x"></i>
+            </div>
+            <div class="col-10 d-flex flex-column text-left">
+              <a href="#"> 469 311 292 </a>
+              <a href="#"> red@gymhlinsko.cz </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
+          <div class="row">
+            <div class="col-2 my-auto">
+              <i class="fa-brands fa-facebook fa-2x"></i>
+            </div>
+            <div class="col-10 my-auto text-left">
+              <a href="#" target="_blank">
+                Facebook
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </body>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
