--- a/contacts.html
+++ b/contacts.html
@@ -9,46 +9,46 @@
 </head>
 
 <body>
-<header>
-  <nav role="navigation" class="container-lg container-fluid">
-    <ul id="socials">
-      <li class="me-auto">
-        <a href="index.html" class="ms-0">
-          <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-          <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
-        </a>
-      </li>
-    </ul>
-    <ul id="main-navigation">
-      <li><a href="about-us.html">Aktivity školy</a></li>
-      <li><a href="our-team.html">Náš tým</a></li>
-      <li><a href="empty-page.html">Škola</a></li>
-      <li><a href="fotogalery.html">Fotogalerie</a></li>
-      <li><a href="for-applicants.html">Pro uchazeče</a></li>
-      <li><a href="empty-page.html">Informace ke studiu</a></li>
-      <li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-    <ul id="burger-button" class="m-0">
-      <li class="burger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </li>
-    </ul>
-    <ul class="mobile-menu">
-      <li><a href="about-us.html">Aktivity školy</a></li>
-      <li><a href="our-team.html">Náš tým</a></li>
-      <li><a href="empty-page.html">Škola</a></li>
-      <li><a href="fotogalery.html">Fotogalerie</a></li>
-      <li><a href="for-applicants.html">Pro uchazeče</a></li>
-      <li><a href="empty-page.html">Informace ke studiu</a></li>
-      <li><a href="contacts.html">Kontakty</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav role="navigation" class="container-lg container-fluid">
+      <ul id="socials">
+        <li class="me-auto">
+          <a href="index.html" class="ms-0">
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
+          </a>
+        </li>
+      </ul>
+      <ul id="main-navigation">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+      <ul id="burger-button" class="m-0">
+        <li class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </li>
+      </ul>
+      <ul class="mobile-menu">
+        <li><a href="about-us.html">Aktivity školy</a></li>
+        <li><a href="our-team.html">Náš tým</a></li>
+        <li><a href="empty-page.html">Škola</a></li>
+        <li><a href="fotogalery.html">Fotogalerie</a></li>
+        <li><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li><a href="empty-page.html">Informace ke studiu</a></li>
+        <li><a href="contacts.html">Kontakty</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
@@ -69,9 +69,9 @@
       </div>
 
       <div class="row text-center mt-3">
-        <div class="col-xl-8 col-lg-10 col-12 mx-auto">
-          <div class="row">
-            <div class="col-4">
+        <div class="col-xl-10 col-lg-12 col-md-10 col-12 mx-auto px-0">
+          <div class="row boxes">
+            <div class="col-xl-4 col-lg-4 col-md-8 col-12 mx-auto px-lg-2 py-md-2 px-md-0 py-2 px-0">
               <div class="box primary">
                 <h3 class="mt-0">Škola</h3>
                 <p>Adámkova 55, 539 01 Hlinsko<br /></p>
@@ -80,7 +80,7 @@
                 <a href="tel:+420 469 311 190">+420 469 311 190</a>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-xl-4 col-lg-4 col-md-8 col-12 mx-auto px-lg-2 py-md-2 px-md-0 py-2 px-0">
               <div class="box secondary">
                 <h3 class="mt-0">RNDr. Rostislav Dvořáček</h3>
                 <p>ředitel<br /></p>
@@ -89,10 +89,10 @@
                 <a href="mailto: red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-xl-4 col-lg-4 col-md-8 col-12 mx-auto px-lg-2 py-md-2 px-md-0 py-2 px-0">
               <div class="box tertiary">
                 <h3 class="mt-0">Ing. Romana Nováková</h3>
-                <p>zástupkyně ředitele, Bi, IT, Ltv, Eko<br /></p>
+                <p>zástupce ředitele, Bi, IT, Ltv, Eko<br /></p>
                 <a href="mailto: novakova.romana@gymhlinsko.cz">
                   novakova.romana@gymhlinsko.cz
                 </a>
@@ -104,8 +104,8 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
+      <div class="row m-0">
+        <div class="col-12 p-0">
           <div class="stripe primary text-center">
             Napiště nám Váš dotaz pomocí formuláře
           </div>
@@ -113,25 +113,25 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container mb-5">
       <div class="row">
         <div class="col-lg-6 col-md-10 col-12 mx-auto">
           <form>
             <label>
               Jméno a příjmení
-              <input type="text" placeholder="Př.: Vladimír Novák..." />
+              <input type="text" placeholder="Př.: Vladimír Novák..." required />
             </label>
             <label>
               Váš e-mail
-              <input type="email" placeholder="Př.: E-mail@seznam.cz..." />
+              <input type="email" placeholder="Př.: E-mail@seznam.cz..." required />
             </label>
             <label>
               Telefonní číslo
-              <input type="tel" placeholder="Př.: 123 456 789..." />
+              <input type="tel" placeholder="Př.: 123 456 789..." required pattern="^\d{1,9}$" />
             </label>
             <label>
               Napiště zde Váš dotaz
-              <textarea placeholder="Popište Váš dotaz zde..." rows="7">
+              <textarea placeholder="Popište Váš dotaz zde..." rows="7" required>
                 </textarea>
             </label>
             <button class="btn btn-primary mt-2" type="submit">
@@ -147,7 +147,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
@@ -168,8 +168,8 @@
               <i class="fa-solid fa-comment fa-2x"></i>
             </div>
             <div class="col-10 d-flex flex-column text-left">
-              <a href="#"> 469 311 292 </a>
-              <a href="#"> red@gymhlinsko.cz </a>
+              <a href="tel:+420 469 311 292"> 469 311 292 </a>
+              <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
             </div>
           </div>
         </div>
@@ -179,8 +179,8 @@
               <i class="fa-brands fa-facebook fa-2x"></i>
             </div>
             <div class="col-10 my-auto text-left">
-              <a href="#" target="_blank">
-                Facebook
+              <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
+                Facebookové stránky Gymnázia
               </a>
             </div>
           </div>
