--- a/about-us.html
+++ b/about-us.html
@@ -14,12 +14,12 @@
       <ul id="socials">
         <li class="me-auto">
           <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
           </a>
         </li>
         <li>
           <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
           </a>
         </li>
       </ul>
@@ -56,7 +56,7 @@
       <div class="container">
         <ul class="links">
           <li>
-            <a class="active" href="#">Novinky</a>
+            <a class="active" href="about-us.html">Novinky</a>
           </li>
           <li>
             <a href="empty-page.html">Události</a>
@@ -85,7 +85,7 @@
       </div>
       <div class="row news mb-4">
         <div class="col-lg-3 d-lg-flex d-none justify-content-center align-items-center">
-          <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.png" />
+          <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.svg" />
         </div>
         <div class="col-lg-9 col-12">
           <article class="odd">
@@ -94,7 +94,7 @@
               5.
             </h3>
             <h4 class="m-0">11.07.2022 10:38</h4>
-            <p>
+            <p class="text-justify">
               Ve středu 22.6. a ve čtvrtek 23.6. se studenti tříd 1.C, 4.A a
               5.A podívali do Rakouska. Po velmi časném vstávání nás čekala
               dlouhá cesta autobusem jen s krátkými přestávkami. Po příjezdu
@@ -104,7 +104,7 @@
               alpské louky, vodopád i další přírodní zajímavosti. Navečer jsme
               dorazili na ubytovnu, kde jsme měli večeři a 2. den snídani.
             </p>
-            <p>
+            <p class="text-justify">
               Celou noc pršelo, ráno byla mlha a mrholilo, to nám ale
               nevadilo, protože jsme dopoledne strávili v solných dolech v
               Hallstattu – začali jsme jízdou zubačkou nad Hallstatt, na ni
@@ -129,20 +129,20 @@
       <div class="row news mb-4">
         <div class="col-lg-3 d-lg-flex d-none justify-content-center align-items-center">
           <div>
-            <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.png" />
+            <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.svg" />
           </div>
         </div>
         <div class="col-lg-9 col-12">
           <article class="even">
             <h3 class="mb-1">Vídeň</h3>
             <h4 class="m-0">11.07.2022 09:54</h4>
-            <p>
+            <p class="text-justify">
               V pondělí 6. června 2022 vyrazilo čtyřicet dva žáků vyššího
               gymnázia v doprovodu profesorů Lenky Krupičkové, Mariana
               Solčanského a velice energické paní průvodkyně Ivanky Augustové
               na historický zájezd Po stopách Marie Terezie.
             </p>
-            <p>
+            <p class="text-justify">
               Naše první kroky vedly do Vídně, kde jsme si za krásného letního
               počasí prohlédli zámek Schönbrunn a přilehlé zahrady. Po
               prohlídce historické části Vídně včetně paláce Hofburg a krypty
@@ -169,14 +169,14 @@
       <div class="row news mb-4">
         <div class="col-lg-3 d-lg-flex d-none justify-content-center align-items-center">
           <div>
-            <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.png" />
+            <img class="news-logo" alt="logo clanku" src="www/assets/logo/logo.svg" />
           </div>
         </div>
         <div class="col-lg-9 col-12">
           <article class="odd">
             <h3 class="mb-1">Brno</h3>
             <h4 class="m-0">11.07.2022 09:48</h4>
-            <p>
+            <p class="text-justify">
               Dne 22. 6. 2022 se uskutečnila historicko-geografická exkurze do
               Brna na výstavu Tutanchamon. Exkurze se zúčastnilo celkem 42
               žáků ze tříd 2.C a 6.A. Dopoledne si studenti prošli historické
@@ -202,7 +202,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
@@ -223,8 +223,8 @@
               <i class="fa-solid fa-comment fa-2x"></i>
             </div>
             <div class="col-10 d-flex flex-column text-left">
-              <a href="#"> 469 311 292 </a>
-              <a href="#"> red@gymhlinsko.cz </a>
+              <a href="tel:+420 469 311 292"> 469 311 292 </a>
+              <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
             </div>
           </div>
         </div>
@@ -234,8 +234,8 @@
               <i class="fa-brands fa-facebook fa-2x"></i>
             </div>
             <div class="col-10 my-auto text-left">
-              <a href="#" target="_blank">
-                Facebook
+              <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
+                Facebookové stránky Gymnázia
               </a>
             </div>
           </div>
