--- a/empty-page.html
+++ b/empty-page.html
@@ -14,12 +14,12 @@
       <ul id="socials">
         <li class="me-auto">
           <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
           </a>
         </li>
         <li>
           <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
           </a>
         </li>
       </ul>
@@ -61,8 +61,12 @@
     <div class="container h-100">
       <div class="row justify-content-center align-items-center h-100">
         <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
-          <i class="fa-solid fa-laptop-medical fa-10x" style="color: #666666bd;"></i>
+          <i class="fa-solid fa-laptop-medical fa-10x" style="color: #35537b;"></i>
           <h2>Opps... Tady ještě nic není. Zkus to někdy jindy!</h2>
+          <button class="btn btn-back" onclick="history.back()">
+            <i class="fa-solid fa-arrow-left"></i>
+            Jít zpět
+          </button>
         </div>
       </div>
     </div>
@@ -71,7 +75,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-            <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+            <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
           </div>
           <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
             <div class="row">
@@ -92,8 +96,8 @@
                 <i class="fa-solid fa-comment fa-2x"></i>
               </div>
               <div class="col-10 d-flex flex-column text-left">
-                <a href="#"> 469 311 292 </a>
-                <a href="#"> red@gymhlinsko.cz </a>
+                <a href="tel:+420 469 311 292"> 469 311 292 </a>
+                <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
               </div>
             </div>
           </div>
@@ -103,8 +107,8 @@
                 <i class="fa-brands fa-facebook fa-2x"></i>
               </div>
               <div class="col-10 my-auto text-left">
-                <a href="#" target="_blank">
-                  Facebook
+                <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
+                  Facebookové stránky Gymnázia
                 </a>
               </div>
             </div>
