--- a/for-applicants.html
+++ b/for-applicants.html
@@ -14,12 +14,12 @@
       <ul id="socials">
         <li class="me-auto">
           <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
           </a>
         </li>
         <li>
           <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
           </a>
         </li>
       </ul>
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">Vse o prijimacich zkousek a pripravy na ne</h1>
+          <h1 class="text-center">Vše o přijímacích zkouškách a přípravy na ně</h1>
         </div>
       </div>
       <section class="row for-applicants mb-4">
@@ -72,7 +72,7 @@
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="odd">
             <div class="col-12">
-              <h2 class="m-0">PŘIJÍMACÍ ŘÍZENÍ NA ŠKOLNÍ ROK 2023/2024</h2>
+              <h2>Přijímací řízení na školský rok 2023/24</h2>
             </div>
             <div class="col-12 ms-2">
               <h3>
@@ -104,7 +104,7 @@
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="even">
             <div class="col-12">
-              <h2 class="m-0">PŘÍPRAVNé KURZy ve školním roce 2022/2023</h2>
+              <h2>Přípravné kurzy ve školním roce 2022/2023</h2>
             </div>
             <div class="col-12 ms-2">
               <h3>
@@ -141,7 +141,7 @@
         <div class="col-lg-9 col-md-8 col-sm-10 col-12 mx-auto">
           <article class="odd">
             <div class="col-12">
-              <h2 class="m-0">Přijímací zkoušky nanečisto 2022/2023</h2>
+              <h2>Přijímací zkoušky nanečisto 2022/2023</h2>
             </div>
             <div class="col-12 ms-2">
               <h3>
@@ -149,7 +149,6 @@
                 2023.
               </h3>
               <ul>
-                Výsledky:
                 <li>
                   <a target="_blank" href="#">
                     Výsledky žáku 9. třídy
@@ -172,7 +171,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
@@ -193,8 +192,8 @@
               <i class="fa-solid fa-comment fa-2x"></i>
             </div>
             <div class="col-10 d-flex flex-column text-left">
-              <a href="#"> 469 311 292 </a>
-              <a href="#"> red@gymhlinsko.cz </a>
+              <a href="tel:+420 469 311 292"> 469 311 292 </a>
+              <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
             </div>
           </div>
         </div>
@@ -204,8 +203,8 @@
               <i class="fa-brands fa-facebook fa-2x"></i>
             </div>
             <div class="col-10 my-auto text-left">
-              <a href="#" target="_blank">
-                Facebook
+              <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
+                Facebookové stránky Gymnázia
               </a>
             </div>
           </div>
