--- a/fotogalery.html
+++ b/fotogalery.html
@@ -14,12 +14,12 @@
       <ul id="socials">
         <li class="me-auto">
           <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.png" />
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
           </a>
         </li>
         <li>
           <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.png" alt="logo-bakalari" />
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
           </a>
         </li>
       </ul>
@@ -56,7 +56,7 @@
       <div class="container">
         <ul class="links">
           <li>
-            <a class="active" href="#">2022/23</a>
+            <a class="active" href="fotogalery.html">2022/23</a>
           </li>
           <li>
             <a href="empty-page.html">2021/22</a>
@@ -86,56 +86,33 @@
       </div>
 
       <div class="row mb-4 pt-2 pb-2">
-        <div class="col-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet1.jpg" alt="Obrazek z vyletu" />
           </a>
+          Výlet
         </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet2.jpg" alt="Obrazek z vyletu" />
           </a>
+          Výlet
         </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet3.jpg" alt="Obrazek z vyletu" />
           </a>
+          Výlet
         </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
+        <div
+          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet4.jpg" alt="Obrazek z vyletu" />
           </a>
-        </div>
-      </div>
-
-      <div class="row mb-4 pt-2 pb-2">
-        <div class="col-3 d-flex justify-content-center align-items-center img">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
-          </a>
-        </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
-          </a>
-        </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
-          </a>
-        </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/gallery/Rak4.jpg" alt="Obrazek z vyletu" />
-            Výlet
-          </a>
+          Výlet
         </div>
       </div>
     </div>
@@ -145,7 +122,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.png" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
@@ -166,8 +143,8 @@
               <i class="fa-solid fa-comment fa-2x"></i>
             </div>
             <div class="col-10 d-flex flex-column text-left">
-              <a href="#"> 469 311 292 </a>
-              <a href="#"> red@gymhlinsko.cz </a>
+              <a href="tel:+420 469 311 292"> 469 311 292 </a>
+              <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
             </div>
           </div>
         </div>
@@ -177,8 +154,8 @@
               <i class="fa-brands fa-facebook fa-2x"></i>
             </div>
             <div class="col-10 my-auto text-left">
-              <a href="#" target="_blank">
-                Facebook
+              <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
+                Facebookové stránky Gymnázia
               </a>
             </div>
           </div>
