--- a/fotogalery.html
+++ b/fotogalery.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="www/dist/style.css" />
+  <link href="www/assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+  <link href="www/assets/fontawesome/css/brands.min.css" rel="stylesheet">
+  <link href="www/assets/fontawesome/css/solid.min.css" rel="stylesheet">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
@@ -166,6 +169,5 @@
 </body>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
-<script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 
 </html>
