--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="www/dist/style.css" />
+  <link href="www/assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+  <link href="www/assets/fontawesome/css/brands.min.css" rel="stylesheet">
+  <link href="www/assets/fontawesome/css/solid.min.css" rel="stylesheet">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
@@ -246,16 +249,5 @@
 </body>
 
 <script type="text/javascript" src="www/dist/scripts.min.js"></script>
-<script defer src="node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
-
-<template>
-  <div class="row mt-5">
-    <div class="col-2 mx-auto">
-      <a href="#">
-        <button>Zpatky nahoru</button>
-      </a>
-    </div>
-  </div>
-</template>
 
 </html>
