--- a/empty-page.html
+++ b/empty-page.html
@@ -5,9 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="www/dist/style.css" />
-  <link href="www/assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/brands.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/solid.min.css" rel="stylesheet">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
@@ -16,13 +13,13 @@
     <nav role="navigation" class="container-lg container-fluid">
       <ul id="socials">
         <li class="me-auto">
-          <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
+          <a href="index.html" class="ms-0" aria-label='Přejít na domovskou stránku'>
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" width='150' height='150'/>
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" width='150' height='150' />
           </a>
         </li>
       </ul>
@@ -65,7 +62,7 @@
       <div class="row justify-content-center align-items-center h-100">
         <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
           <h2>Opps... Tady ještě nic není. Zkus to někdy jindy!</h2>
-          <button class="btn btn-back" onclick="history.back()">
+          <button aria-label='Jít zpět' class="btn btn-back" onclick="history.back()">
             <svg class="svg-inline--fa fa-arrow-left" aria-hidden="true" focusable="false" data-prefix="fas"
               data-icon="arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
               data-fa-i2svg="">
@@ -84,7 +81,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" width='150' height='150' />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
