--- a/fotogalery.html
+++ b/fotogalery.html
@@ -5,9 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="www/dist/style.css" />
-  <link href="www/assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/brands.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/solid.min.css" rel="stylesheet">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
@@ -16,13 +13,13 @@
     <nav role="navigation" class="container-lg container-fluid">
       <ul id="socials">
         <li class="me-auto">
-          <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
+          <a href="index.html" class="ms-0" aria-label='Přejít na domovskou stránku'>
+            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" width='150' height='150' />
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
+            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" width='150' height='150' />
           </a>
         </li>
       </ul>
@@ -67,7 +64,6 @@
           <li>
             <a href="empty-page.html">2020/21</a>
           </li>
-          </li>
           <li>
             <a href="empty-page.html">2019/20</a>
           </li>
@@ -92,28 +88,28 @@
         <div
           class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet1.jpg" alt="Obrazek z vyletu" />
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet1.webp" alt="Obrazek z vyletu" width='612' height='408'/>
           </a>
           Výlet
         </div>
         <div
           class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet2.jpg" alt="Obrazek z vyletu" />
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet2.webp" alt="Obrazek z vyletu" width='612' height='408' />
           </a>
           Výlet
         </div>
         <div
           class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet3.jpg" alt="Obrazek z vyletu" />
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet3.webp" alt="Obrazek z vyletu" width='612' height='408' />
           </a>
           Výlet
         </div>
         <div
           class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
           <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet4.jpg" alt="Obrazek z vyletu" />
+            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet4.webp" alt="Obrazek z vyletu" width='612' height='459' />
           </a>
           Výlet
         </div>
@@ -125,7 +121,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" width='16' height='16' />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
