--- a/our-team.html
+++ b/our-team.html
@@ -5,9 +5,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="www/dist/style.css" />
-  <link href="www/assets/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/brands.min.css" rel="stylesheet">
-  <link href="www/assets/fontawesome/css/solid.min.css" rel="stylesheet">
   <title>Gymnázium K. V. Raise</title>
 </head>
 
@@ -16,13 +13,13 @@
     <nav role="navigation" class="container-lg container-fluid">
       <ul id="socials">
         <li class="me-auto">
-          <a href="index.html" class="ms-0">
-            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" />
+          <a href="index.html" class="ms-0" aria-label='Přejít na domovskou stránku'>
+            <img class="logo" alt="logo" width='150' height='150' src="www/assets/logo/logo.svg" />
           </a>
         </li>
         <li>
-          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login">
-            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" />
+          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
+            <img src="www/assets/logo/bakalari-logo.svg" width='100' height='100' alt="logo-bakalari" />
           </a>
         </li>
       </ul>
@@ -165,7 +162,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" />
+          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" width='150' height='150' />
         </div>
         <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
           <div class="row">
