Lazy load, tab index

--- a/about-us.html
+++ b/about-us.html
@@ -10,27 +10,27 @@
 
 <body>
   <header>
-    <nav role="navigation" class="container-lg container-fluid">
+    <nav role="navigation" class="container-xl container-fluid">
       <ul id="socials">
-        <li class="me-auto">
+        <li class="me-auto" tabindex='0'>
           <a href="index.html" class="ms-0" aria-label='Přejít na domovskou stránku'>
             <img class="logo" alt="logo" src="www/assets/logo/logo.svg"  width='150' height='150' />
           </a>
         </li>
-        <li>
+        <li tabindex='8'>
           <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
             <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari"  width='150' height='150' />
           </a>
         </li>
       </ul>
       <ul id="main-navigation">
-        <li><a href="about-us.html">Aktivity školy</a></li>
-        <li><a href="our-team.html">Náš tým</a></li>
-        <li><a href="empty-page.html">Škola</a></li>
-        <li><a href="fotogalery.html">Fotogalerie</a></li>
-        <li><a href="for-applicants.html">Pro uchazeče</a></li>
-        <li><a href="empty-page.html">Informace ke studiu</a></li>
-        <li><a href="contacts.html">Kontakty</a></li>
+        <li tabindex='1'><a href="about-us.html">Aktivity školy</a></li>
+        <li tabindex='2'><a href="our-team.html">Náš tým</a></li>
+        <li tabindex='3'><a href="empty-page.html">Škola</a></li>
+        <li tabindex='4'><a href="fotogalery.html">Fotogalerie</a></li>
+        <li tabindex='5'><a href="for-applicants.html">Pro uchazeče</a></li>
+        <li tabindex='6'><a href="empty-page.html">Informace ke studiu</a></li>
+        <li tabindex='7'><a href="contacts.html">Kontakty</a></li>
       </ul>
       <ul id="burger-button" class="m-0">
         <li class="burger">
