--- a/fotogalery.html
+++ b/fotogalery.html
@@ -1,169 +1,194 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang='cs'>
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="www/dist/style.css" />
+  <meta charset='utf-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
+  <link rel='stylesheet' href='www/dist/style.css' />
   <title>Gymnázium K. V. Raise</title>
 </head>
 
 <body>
-  <header>
-    <nav role="navigation" class="container-lg container-fluid">
-      <ul id="socials">
-        <li class="me-auto">
-          <a href="index.html" class="ms-0" aria-label='Přejít na domovskou stránku'>
-            <img class="logo" alt="logo" src="www/assets/logo/logo.svg" width='150' height='150' />
-          </a>
+<header>
+  <nav role='navigation' class='container-xl container-fluid'>
+    <ul id='socials'>
+      <li class='me-auto' tabindex='0'>
+        <a href='index.html' class='ms-0' aria-label='Přejít na domovskou stránku'>
+          <img class='logo' alt='logo' src='www/assets/logo/logo.svg' width='150' height='150' />
+        </a>
+      </li>
+      <li tabindex='8'>
+        <a target='_blank' href='https://bakalari.gymhlinsko.cz/bakaweb/Login'
+           aria-label='Odkaz na stránkz Bakaláři.cz'>
+          <img src='www/assets/logo/bakalari-logo.svg' alt='logo-bakalari' width='150' height='150' />
+        </a>
+      </li>
+    </ul>
+    <ul id='main-navigation'>
+
+      <li tabindex='1'><a href='about-us.html'>Aktivity školy</a></li>
+      <li tabindex='2'><a href='our-team.html'>Náš tým</a></li>
+      <li tabindex='3'><a href='empty-page.html'>Škola</a></li>
+      <li tabindex='4'><a href='fotogalery.html'>Fotogalerie</a></li>
+      <li tabindex='5'><a href='for-applicants.html'>Pro uchazeče</a></li>
+      <li tabindex='6'><a href='empty-page.html'>Informace ke studiu</a></li>
+      <li tabindex='7'><a href='contacts.html'>Kontakty</a></li>
+
+    </ul>
+    <ul id='burger-button' class='m-0'>
+      <li class='burger'>
+        <div class='line'></div>
+        <div class='line'></div>
+        <div class='line'></div>
+      </li>
+    </ul>
+    <ul class='mobile-menu'>
+      <li><a href='about-us.html'>Aktivity školy</a></li>
+      <li><a href='our-team.html'>Náš tým</a></li>
+      <li><a href='empty-page.html'>Škola</a></li>
+      <li><a href='fotogalery.html'>Fotogalerie</a></li>
+      <li><a href='for-applicants.html'>Pro uchazeče</a></li>
+      <li><a href='empty-page.html'>Informace ke studiu</a></li>
+      <li><a href='contacts.html'>Kontakty</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <div id='sub-nav'>
+    <div class='container'>
+      <ul class='links'>
+        <li>
+          <a class='active' href='fotogalery.html'>2022/23</a>
         </li>
         <li>
-          <a target="_blank" href="https://bakalari.gymhlinsko.cz/bakaweb/Login" aria-label='Odkaz na stránkz Bakaláři.cz'>
-            <img src="www/assets/logo/bakalari-logo.svg" alt="logo-bakalari" width='150' height='150' />
-          </a>
+          <a href='empty-page.html'>2021/22</a>
+        </li>
+        <li>
+          <a href='empty-page.html'>2020/21</a>
+        </li>
+        <li>
+          <a href='empty-page.html'>2019/20</a>
+        </li>
+        <li>
+          <a href='empty-page.html'>2018/19</a>
+        </li>
+        <li>
+          <a href='empty-page.html'>2017/18</a>
         </li>
       </ul>
-      <ul id="main-navigation">
-        <li><a href="about-us.html">Aktivity školy</a></li>
-        <li><a href="our-team.html">Náš tým</a></li>
-        <li><a href="empty-page.html">Škola</a></li>
-        <li><a href="fotogalery.html">Fotogalerie</a></li>
-        <li><a href="for-applicants.html">Pro uchazeče</a></li>
-        <li><a href="empty-page.html">Informace ke studiu</a></li>
-        <li><a href="contacts.html">Kontakty</a></li>
-      </ul>
-      <ul id="burger-button" class="m-0">
-        <li class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </li>
-      </ul>
-      <ul class="mobile-menu">
-        <li><a href="about-us.html">Aktivity školy</a></li>
-        <li><a href="our-team.html">Náš tým</a></li>
-        <li><a href="empty-page.html">Škola</a></li>
-        <li><a href="fotogalery.html">Fotogalerie</a></li>
-        <li><a href="for-applicants.html">Pro uchazeče</a></li>
-        <li><a href="empty-page.html">Informace ke studiu</a></li>
-        <li><a href="contacts.html">Kontakty</a></li>
-      </ul>
-    </nav>
-  </header>
+    </div>
+  </div>
 
-  <main>
-    <div id="sub-nav">
-      <div class="container">
-        <ul class="links">
-          <li>
-            <a class="active" href="fotogalery.html">2022/23</a>
-          </li>
-          <li>
-            <a href="empty-page.html">2021/22</a>
-          </li>
-          <li>
-            <a href="empty-page.html">2020/21</a>
-          </li>
-          <li>
-            <a href="empty-page.html">2019/20</a>
-          </li>
-          <li>
-            <a href="empty-page.html">2018/19</a>
-          </li>
-          <li>
-            <a href="empty-page.html">2017/18</a>
-          </li>
-        </ul>
+  <div class='container fotogalery'>
+    <div class='row'>
+      <div class='col-12'>
+        <h1 class='text-center'>Fotogalerie</h1>
       </div>
     </div>
 
-    <div class="container fotogalery">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="text-center">Fotogalerie</h1>
-        </div>
+    <div class='row mb-4 pt-2 pb-2'>
+      <div
+        class='col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2'>
+        <a class='text-center' href='#'>
+          <img class='fotogalery-img mb-2' src='www/assets/trip-photos/vylet1.webp' alt='Obrazek z vyletu' width='612'
+               height='408' />
+        </a>
+        Výlet
       </div>
-
-      <div class="row mb-4 pt-2 pb-2">
-        <div
-          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet1.webp" alt="Obrazek z vyletu" width='612' height='408'/>
-          </a>
-          Výlet
-        </div>
-        <div
-          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet2.webp" alt="Obrazek z vyletu" width='612' height='408' />
-          </a>
-          Výlet
-        </div>
-        <div
-          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet3.webp" alt="Obrazek z vyletu" width='612' height='408' />
-          </a>
-          Výlet
-        </div>
-        <div
-          class="col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2">
-          <a class="text-center" href="#">
-            <img class="fotogalery-img mb-2" src="www/assets/trip-photos/vylet4.webp" alt="Obrazek z vyletu" width='612' height='459' />
-          </a>
-          Výlet
-        </div>
+      <div
+        class='col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2'>
+        <a class='text-center' href='#'>
+          <img class='fotogalery-img mb-2' src='www/assets/trip-photos/vylet2.webp' alt='Obrazek z vyletu' width='612'
+               height='408' />
+        </a>
+        Výlet
+      </div>
+      <div
+        class='col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2'>
+        <a class='text-center' href='#'>
+          <img class='fotogalery-img mb-2' src='www/assets/trip-photos/vylet3.webp' alt='Obrazek z vyletu' width='612'
+               height='408' />
+        </a>
+        Výlet
+      </div>
+      <div
+        class='col-xl-3 col-lg-6 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column pb-2'>
+        <a class='text-center' href='#'>
+          <img class='fotogalery-img mb-2' src='www/assets/trip-photos/vylet4.webp' alt='Obrazek z vyletu' width='612'
+               height='459' />
+        </a>
+        Výlet
       </div>
     </div>
-  </main>
+  </div>
+</main>
 
-  <footer>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-3 col-12 mx-auto my-1 text-left">
-          <img class="logo" alt="logo" src="www/assets/logo/logo-footer.svg" width='16' height='16' />
-        </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <svg class="svg-inline--fa fa-location-dot fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="location-dot" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg=""><path fill="currentColor" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
-            </div>
-            <div class="col-10 my-auto text-left">
-              <a href="https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618"
-                target="_blank">
-                Adámkova 55, 539 01 Hlinsko
-              </a>
-            </div>
+<footer>
+  <div class='container'>
+    <div class='row align-items-center'>
+      <div class='col-lg-3 col-12 mx-auto my-1 text-left'>
+        <img class='logo' alt='logo' src='www/assets/logo/logo-footer.svg' width='16' height='16' />
+      </div>
+      <div class='col-lg-3 col-md-4 col-12 mx-auto my-1 text-center'>
+        <div class='row'>
+          <div class='col-2 my-auto'>
+            <svg class='svg-inline--fa fa-location-dot fa-2x' aria-hidden='true' focusable='false' data-prefix='fas'
+                 data-icon='location-dot' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 384 512'
+                 data-fa-i2svg=''>
+              <path fill='currentColor'
+                    d='M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z'></path>
+            </svg>
+          </div>
+          <div class='col-10 my-auto text-left'>
+            <a
+              href='https://www.google.com/maps/place/Ad%C3%A1mkova+t%C5%99.+55,+539+01+Hlinsko/@49.7615938,15.9046731,17z/data=!3m1!4b1!4m5!3m4!1s0x470dbb38b694df4f:0x7c1ec6568da4e9a1!8m2!3d49.7615904!4d15.9068618'
+              target='_blank'>
+              Adámkova 55, 539 01 Hlinsko
+            </a>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <svg class="svg-inline--fa fa-comment fa-2x" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4l0 0 0 0 0 0 0 0 .3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z"></path></svg>
-            </div>
-            <div class="col-10 d-flex flex-column text-left">
-              <a href="tel:+420 469 311 292"> 469 311 292 </a>
-              <a href="mailto:red@gymhlinsko.cz"> red@gymhlinsko.cz </a>
-            </div>
+      </div>
+      <div class='col-lg-3 col-md-4 col-12 mx-auto my-1 text-center'>
+        <div class='row'>
+          <div class='col-2 my-auto'>
+            <svg class='svg-inline--fa fa-comment fa-2x' aria-hidden='true' focusable='false' data-prefix='fas'
+                 data-icon='comment' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'
+                 data-fa-i2svg=''>
+              <path fill='currentColor'
+                    d='M512 240c0 114.9-114.6 208-256 208c-37.1 0-72.3-6.4-104.1-17.9c-11.9 8.7-31.3 20.6-54.3 30.6C73.6 471.1 44.7 480 16 480c-6.5 0-12.3-3.9-14.8-9.9c-2.5-6-1.1-12.8 3.4-17.4l0 0 0 0 0 0 0 0 .3-.3c.3-.3 .7-.7 1.3-1.4c1.1-1.2 2.8-3.1 4.9-5.7c4.1-5 9.6-12.4 15.2-21.6c10-16.6 19.5-38.4 21.4-62.9C17.7 326.8 0 285.1 0 240C0 125.1 114.6 32 256 32s256 93.1 256 208z'></path>
+            </svg>
+          </div>
+          <div class='col-10 d-flex flex-column text-left'>
+            <a href='tel:+420 469 311 292'> 469 311 292 </a>
+            <a href='mailto:red@gymhlinsko.cz'> red@gymhlinsko.cz </a>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 col-12 mx-auto my-1 text-center">
-          <div class="row">
-            <div class="col-2 my-auto">
-              <svg class="svg-inline--fa fa-facebook fa-2x" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg>
-            </div>
-            <div class="col-10 my-auto text-left">
-              <a href="https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ" target="_blank">
-                Facebookové stránky Gymnázia
-              </a>
-            </div>
+      </div>
+      <div class='col-lg-3 col-md-4 col-12 mx-auto my-1 text-center'>
+        <div class='row'>
+          <div class='col-2 my-auto'>
+            <svg class='svg-inline--fa fa-facebook fa-2x' aria-hidden='true' focusable='false' data-prefix='fab'
+                 data-icon='facebook' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'
+                 data-fa-i2svg=''>
+              <path fill='currentColor'
+                    d='M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z'></path>
+            </svg>
+          </div>
+          <div class='col-10 my-auto text-left'>
+            <a
+              href='https://www.facebook.com/people/Gymn%C3%A1zium-K-V-Raise-Hlinsko-Ad%C3%A1mkova-55/100063570054260/?locale=cs_CZ'
+              target='_blank'>
+              Facebookové stránky Gymnázia
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 </body>
 
-<script type="text/javascript" src="www/dist/scripts.min.js"></script>
+<script type='text/javascript' src='www/dist/scripts.min.js'></script>
 
 </html>
