--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-          <img src='www/assets/slideshow/slideshow1.webp' alt='x' loading='lazy' />
+          <img src='www/assets/slideshow/slideshow1.webp' alt='first-image' loading='eager' />
           <div class="swiper-lazy-preloader"></div>
         </div>
         <div class="swiper-slide">
-          <img src='www/assets/slideshow/slideshow2.webp' alt='x' loading='lazy' />
+          <img src='www/assets/slideshow/slideshow2.webp' alt='second-image' loading='lazy' />
           <div class="swiper-lazy-preloader"></div>
         </div>
         <div class="swiper-slide">
-          <img src='www/assets/slideshow/slideshow3.webp' alt='x' loading='lazy' />
+          <img src='www/assets/slideshow/slideshow3.webp' alt='third-image' loading='lazy' />
           <div class="swiper-lazy-preloader"></div>
         </div>
       </div>
