--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-          <img src='www/assets/slideshow/slideshow1.webp' alt='first-image' loading='eager' />
+          <img src='www/assets/slideshow/slideshow1.webp' alt='first-image' />
           <div class="swiper-lazy-preloader"></div>
         </div>
         <div class="swiper-slide">
